--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 nav {
-	margin: 27px auto 0;
+	margin: 27px 630px;
 	position: relative;
 	width: 470px;
 	height: 50px;
 	background-color: #34495e;
 	border-radius: 8px;
 	font-size: 0;
+  border: 3px solid #3498db;
 }
 nav a {
 	line-height: 50px;
@@ -123,7 +124,6 @@ body {
   height: 100%;
   display: table;
   margin-left: 20px;
-  margin-top: -100px;
   text-align: center;
 }
 
@@ -134,10 +134,9 @@ body {
 
 .el-wrapper {
   width: 360px;
-  padding: 20px;
-  margin: 15px auto;
-  background-color: rgb(255, 255, 255);
-  border-radius: 15px;
+  margin: 10px auto;
+  background-color:#34495e;
+  border-radius: 10px;
   display: inline-block;
   text-align: center;
   margin-left: 35px;
@@ -282,14 +281,14 @@ body {
 .info-inner .p-name {
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
-  color: #252525;
+  color: #000000;
 }
 
 .info-inner .p-company {
   font-family: 'Lato', sans-serif;
   font-size: 12px;
   text-transform: uppercase;
-  color: #8c8c8c;
+  color: #000000;
 }
 
 .a-size {
@@ -307,7 +306,7 @@ body {
   width: 100%;
   bottom: -20px;
   font-family: 'PT Sans', sans-serif;
-  color: #828282;
+  color: #000000;
   opacity: 0;
 }
 
@@ -387,12 +386,15 @@ body {
 
 .img{
     width: 66%;
+    width: 66%;
 }
 
 .footer{
     text-align: center;
     color: white;
     background-color: #252525;
-    padding: 20px;
-    border-radius: 5px;
+    padding: 15px;
+    margin-left: -10px;
+    margin-right: -8px;
+    
 }
